--- a/FinPlan.Web/Components/Pages/QuickRetirement.razor
+++ b/FinPlan.Web/Components/Pages/QuickRetirement.razor
@@ -6,6 +6,17 @@
 
 <link href="css/quick-retirement.css" rel="stylesheet" />
 
+<!-- Header Navigation -->
+<div class="quick-retirement-header">
+    <div class="header-container">
+        <NavLink href="/" class="header-brand">FinPlan</NavLink>
+        <div class="header-actions">
+            <NavLink href="/" class="header-link">Dashboard</NavLink>
+            <NavLink href="/" class="header-link">Sign Out</NavLink>
+        </div>
+    </div>
+</div>
+
 <div class="quick-retirement-container">
     @if (!_showResults)
     {
